tests/invalid/scoping/extra_brace.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    if(0){
        return 1;
    }}
    return 2;
}